--- a/.github/workflows/deploy-pdf-generator.yml
+++ b/.github/workflows/deploy-pdf-generator.yml
@@ -41,9 +41,12 @@ jobs:
           cd services/pdf-generator
           pnpm build
 
-      - name: Deploy to Azure Functions
-        uses: Azure/functions-action@v1
+      - name: Login to Azure
+        uses: azure/login@v1
         with:
-          app-name: 'generationai-pdf-generator'
-          package: 'services/pdf-generator'
-          publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE_PDF_GENERATOR }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Deploy to Azure Functions
+        run: |
+          cd services/pdf-generator
+          func azure functionapp publish generationai-pdf-generator --javascript
