--- a/tools/shadow-ai-assessment/frontend/staticwebapp.config.json
+++ b/tools/shadow-ai-assessment/frontend/staticwebapp.config.json
@@ -1,12 +1,14 @@
 {
   "routes": [
     {
-      "route": "/api/*",
-      "allowedRoles": ["anonymous"]
+      "route": "/assets/*",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable"
+      }
     },
     {
-      "route": "/*",
-      "rewrite": "/index.html"
+      "route": "/api/*",
+      "allowedRoles": ["anonymous"]
     }
   ],
   "navigationFallback": {
