--- a/tools/board-governance-assessment/frontend/staticwebapp.config.json
+++ b/tools/board-governance-assessment/frontend/staticwebapp.config.json
@@ -21,7 +21,7 @@
     }
   },
   "globalHeaders": {
-    "content-security-policy": "default-src 'self' https:; style-src 'self' 'unsafe-inline' https:; script-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src 'self' https: data:; connect-src 'self' https://generationai-board-governance.azurewebsites.net https://*.azurewebsites.net; font-src 'self' data: https:",
+    "content-security-policy": "default-src 'self' https:; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline'; img-src 'self' https: data:",
     "x-content-type-options": "nosniff",
     "x-frame-options": "DENY",
     "x-xss-protection": "1; mode=block"
