--- a/tools/business-readiness-assessment/frontend/staticwebapp.config.json
+++ b/tools/business-readiness-assessment/frontend/staticwebapp.config.json
@@ -21,7 +21,7 @@
     }
   },
   "globalHeaders": {
-    "content-security-policy": "default-src 'self' https:; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' https://meetings.hubspot.com https://meetings-ap1.hubspot.com https://*.hsforms.com https://*.share-ap1.hsforms.com https://js-ap1.hsforms.net https://static.hsappstatic.net; frame-src https://meetings.hubspot.com https://meetings-ap1.hubspot.com https://*.hsforms.com https://*.share-ap1.hsforms.com; img-src 'self' https: data:",
+    "content-security-policy": "default-src 'self' https:; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' https://meetings.hubspot.com https://meetings-ap1.hubspot.com https://*.hsforms.com https://static.hsappstatic.net; frame-src https://meetings.hubspot.com https://meetings-ap1.hubspot.com https://*.hsforms.com; img-src 'self' https: data:",
     "x-content-type-options": "nosniff",
     "x-frame-options": "SAMEORIGIN",
     "x-xss-protection": "1; mode=block"
